--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premier Healthcare - Transforming Healthcare Together</title>
+    <title>Shalom Health Care Services - Transforming Healthcare Together</title>
     <meta name="description" content="Premier is a leading healthcare improvement company, uniting an alliance of 4,400+ U.S. hospitals and health systems to transform healthcare delivery and outcomes." />
   </head>
   <body>
